javaDSL/src/test/resources/typeSystemTestModels/valid/constructors/ConstructorNoAccessModifierPair.java
/* (c) https://github.com/MontiCore/monticore */

public class ConstructorNoAccessModifierPair {

  public ConstructorNoAccessModifierPair(){

  }

  protected ConstructorNoAccessModifierPair() {

  }

  private ConstructorNoAccessModifierPair(){

  }


}
