javaDSL/src/test/resources/typeSystemTestModels/invalid/constructors/ConstructorNoDuplicateModifier.java
/* (c) https://github.com/MontiCore/monticore */

package typeSystemTestModels.invalid.constructors;

public class ConstructorNoDuplicateModifier {

  public public ConstructorNoDuplicateModifier(){

  }
}
